[package]
name = "tm"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = { version = "1.0.106", features = ["derive"] }
signal-hook = "0.1.13"
itertools = "0.9.0"
pico-args = "0.3.1"

[profile.release]
lto = true
